Strong coming soon.

--- a/first_day_stuff/bio.html
+++ b/first_day_stuff/bio.html
@@ -16,7 +16,7 @@
     <ul>
         <li>Email: <a href="mailto:akop87@gmail.com">akop87@gmail.com</a></li>
         <li>GitHub: <a href="https://github.com/Jack87">Jack87</a></li>
-        <li>Portfolio: Coming soon! </li>
+        <li>Portfolio: <strong>Coming soon!</strong></li>
       </ul>
 </body>
 </html>
