Spacing changes in code.

--- a/first_day_stuff/bio.html
+++ b/first_day_stuff/bio.html
@@ -9,14 +9,18 @@
 <body>
     <H1>Student Bio</H1>
     <h2>Akop Karapetyan</h2>
+
     <img src="https://avatars3.githubusercontent.com/u/541310?s=460&v=4" alt="" height="200px" width="200px" srcset="">
-    <p>My name is Akop. I go by Jack a lot of the time. I really like riding motorcycles. Coding is pretty fun!</p>
-    <p>I use <a href="http://google.com">google</a> a lot!</p>
+    
+    <p>My name is Akop. I go by Jack a lot of the time. I really like riding motorcycles. Coding is pretty fun! <br>
+        I use <a href="http://google.com">google</a> a lot!
+    </p>
+
     <h3>Contact Info</h3>
     <ul>
         <li>Email: <a href="mailto:akop87@gmail.com">akop87@gmail.com</a></li>
         <li>GitHub: <a href="https://github.com/Jack87">Jack87</a></li>
         <li>Portfolio: <strong>Coming soon!</strong></li>
-      </ul>
+    </ul>
 </body>
 </html>
