--- a/first_day_stuff/bio.html
+++ b/first_day_stuff/bio.html
@@ -5,6 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Bio</title>
+    <style>
+        p {
+            color:red;
+            font-size: 23px;
+        }
+        h3 {
+            color: blueviolet;
+        }
+        img {
+            margin: 10px;
+        }
+        h1 {
+            text-align: center;
+            margin-top: 15px;
+            font-size: 40px;
+            color:bisque;
+        }
+        h2 {
+            color: aqua;
+        }
+        li {color: brown}
+        body {
+            background-image: url(https://images.unsplash.com/photo-1510148199876-8a856ee41d42?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a82c3751ed73cbbd31bbaef3d7233a83&auto=format&fit=crop&w=2100&q=80);
+        }
+    </style>
 </head>
 <body>
     <H1>Student Bio</H1>
